Fix leaderboard toggle opacity + rename My Baker to My Tezos/Baker Details
- Leaderboard toggle now dims (opacity 0.5) when inactive, matching other toggles
- Section title: My Baker → My Tezos (unified personalization branding)
- Dropdown item: My Baker → Baker Details (clearer intent)
- Info modal title updated to My Tezos

--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
                         <button id="objkt-toggle" class="glass-button" aria-label="Toggle NFT Profile" title="NFT Profile: OFF">
                             <span class="objkt-toggle-icon">🖼️</span> <span class="dropdown-label">NFTs</span>
                         </button>
-                        <button id="my-baker-toggle" class="glass-button" aria-label="Toggle My Baker" title="My Baker: OFF">
-                            <span class="my-baker-toggle-icon">🥐</span> <span class="dropdown-label">My Baker</span>
+                        <button id="my-baker-toggle" class="glass-button" aria-label="Toggle Baker Details" title="Baker Details: OFF">
+                            <span class="my-baker-toggle-icon">🥐</span> <span class="dropdown-label">Baker Details</span>
                         </button>
                         <button id="history-btn" class="glass-button" aria-label="View historical data" title="Historical data">
                             <span>📈</span> <span class="dropdown-label">History</span>
@@ -436,8 +436,8 @@
     <!-- My Baker Section (hidden by default, toggled via header button) -->
     <section class="my-baker-section" id="my-baker-section">
         <div class="section-header">
-            <h2 class="section-title">🥐 My Baker</h2>
-            <button class="info-button" id="my-baker-info-btn" aria-label="About My Baker" title="About My Baker">
+            <h2 class="section-title">👤 My Tezos</h2>
+            <button class="info-button" id="my-baker-info-btn" aria-label="About My Tezos" title="About My Tezos">
                 <svg width="20" height="20" viewBox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z" clip-rule="evenodd"/>
                 </svg>
@@ -1541,7 +1541,7 @@
     <div class="modal-overlay" id="my-baker-modal" aria-hidden="true">
         <div class="modal-content">
             <button class="modal-close" id="my-baker-modal-close" aria-label="Close">&times;</button>
-            <h3 class="modal-title">My Baker</h3>
+            <h3 class="modal-title">My Tezos</h3>
             <div class="modal-body">
                 <p>
                     Paste any Tezos address — baker or delegator — to see real-time stats pulled from the <strong>TzKT API</strong>.
