Match menu label: Baker Details → My Tezos (matches section title)

--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
                         <button id="objkt-toggle" class="glass-button" aria-label="Toggle NFT Profile" title="NFT Profile: OFF">
                             <span class="objkt-toggle-icon">🖼️</span> <span class="dropdown-label">NFTs</span>
                         </button>
-                        <button id="my-baker-toggle" class="glass-button" aria-label="Toggle Baker Details" title="Baker Details: OFF">
-                            <span class="my-baker-toggle-icon">🥐</span> <span class="dropdown-label">Baker Details</span>
+                        <button id="my-baker-toggle" class="glass-button" aria-label="Toggle My Tezos" title="My Tezos: OFF">
+                            <span class="my-baker-toggle-icon">👤</span> <span class="dropdown-label">My Tezos</span>
                         </button>
                         <button id="history-btn" class="glass-button" aria-label="View historical data" title="Historical data">
                             <span>📈</span> <span class="dropdown-label">History</span>
