Overnight Report, Stake/Bake to price bar, nav cleanup
- Overnight Report: 🌙 'While you were away' card shows balance/USD/price deltas, rewards earned, baker health changes
- Moved Stake/Bake links from header to price bar (inline, small text)
- Header now just: My Tezos | Features | Settings — cleaner, more space
- Price bar CTAs hidden on small mobile along with other extras

--- a/index.html
+++ b/index.html
@@ -197,6 +197,9 @@
             <span class="price-alt" id="price-btc">—</span>
             <span class="price-separator">·</span>
             <span class="price-mcap">—</span>
+            <span class="price-separator price-cta-sep">·</span>
+            <a href="https://gov.tez.capital" target="_blank" rel="noopener" class="price-cta" title="Stake XTZ">🥩 Stake</a>
+            <a href="https://docs.tez.capital" target="_blank" rel="noopener" class="price-cta" title="Bake on Tezos">🍞 Bake</a>
         </div>
     </div>
 
@@ -280,16 +283,7 @@
                     </div>
                 </div>
 
-                <!-- Separator -->
-                <span class="toolbar-separator"></span>
-
-                <!-- External CTAs — visually separated -->
-                <a href="https://gov.tez.capital" target="_blank" rel="noopener" class="glass-button toolbar-cta" title="Stake your XTZ — gov.tez.capital">
-                    <span>🥩</span><span class="toolbar-cta-label">Stake</span><span class="toolbar-cta-ext">↗</span>
-                </a>
-                <a href="https://docs.tez.capital" target="_blank" rel="noopener" class="glass-button toolbar-cta" title="Start baking on Tezos — docs.tez.capital">
-                    <span>🍞</span><span class="toolbar-cta-label">Bake</span><span class="toolbar-cta-ext">↗</span>
-                </a>
+                <!-- Stake/Bake moved to price bar -->
             </div>
         </div>
     </header>
