Update comparison data accuracy + add hover tooltips
Data corrections (all 4 chains fact-checked):
- ETH: hard forks 14→17+, tx fee -5→/bin/zsh.01-/bin/zsh.10 (post-Dencun)
- SOL: finality 6.4s→12.8s (finalized), slashing→delinquency, staking 65→67%, issuance 5.4→4.2%
- ADA: self-amendments 0→1 (CIP-1694 governance live since Chang), hard forks 5→8+
- ALGO: block time 2.8→3.3s, validators 'relay nodes'→'permissionless sortition', issuance 3→0% (fixed supply)

Tooltip system:
- ⓘ icons on values needing context (12 total)
- Hover/focus reveals glass-morphism tooltip
- Hidden on mobile (<768px)
- Covers: Lido entity counting, Solana finality types, Algorand sortition, issuance nuances

Tweet templates updated to match corrected data.

--- a/index.html
+++ b/index.html
@@ -223,30 +223,39 @@
                     <div class="settings-dropdown" id="features-dropdown">
                         <button id="tezos-stats-toggle" class="glass-button" aria-label="Toggle Tezos Stats" title="Tezos Stats: ON">
                             <span class="tezos-stats-toggle-icon">📊</span> <span class="dropdown-label">Tezos Stats</span>
+                            <span class="dropdown-hint">Live network metrics — economy, consensus, market</span>
                         </button>
                         <button id="my-baker-toggle" class="glass-button" aria-label="Toggle My Tezos" title="My Tezos: OFF">
                             <span class="my-baker-toggle-icon">👤</span> <span class="dropdown-label">My Tezos</span>
+                            <span class="dropdown-hint">Your baker, rewards, delegation details</span>
                         </button>
                         <button id="comparison-toggle" class="glass-button" aria-label="Toggle Tezos vs Other Chains" title="Chains: ON">
                             <span class="comparison-toggle-icon">⛓️</span> <span class="dropdown-label">Vs Others</span>
+                            <span class="dropdown-hint">Tezos vs Ethereum, Solana, Cardano, Algorand</span>
                         </button>
                         <button id="leaderboard-toggle" class="glass-button" aria-label="Toggle Baker Leaderboard" title="Leaderboard: OFF">
                             <span class="leaderboard-toggle-icon">🏆</span> <span class="dropdown-label">Leaderboard</span>
+                            <span class="dropdown-hint">Top bakers ranked by stake and efficiency</span>
                         </button>
                         <button id="whale-toggle" class="glass-button" aria-label="Toggle Mini Whale feed" title="Mini Whale: OFF">
                             <span class="whale-toggle-icon">🐬</span> <span class="dropdown-label">Whales</span>
+                            <span class="dropdown-hint">Live feed of large XTZ transfers (>1K)</span>
                         </button>
                         <button id="giants-toggle" class="glass-button" aria-label="Toggle Sleeping Giants" title="Sleeping Giants: OFF">
                             <span class="giants-toggle-icon">😴</span> <span class="dropdown-label">Giants</span>
+                            <span class="dropdown-hint">Dormant wallets that just woke up</span>
                         </button>
                         <button id="objkt-toggle" class="glass-button" aria-label="Toggle NFT Profile" title="NFT Profile: OFF">
                             <span class="objkt-toggle-icon">🖼️</span> <span class="dropdown-label">NFTs</span>
+                            <span class="dropdown-hint">Your NFT creator & collector profile from Objkt</span>
                         </button>
                         <button id="calc-toggle" class="glass-button" aria-label="Toggle Rewards Calculator" title="Calculator: OFF">
                             <span class="calc-toggle-icon">🧮</span> <span class="dropdown-label">Calculator</span>
+                            <span class="dropdown-hint">Estimate staking & baking rewards</span>
                         </button>
                         <button id="history-btn" class="glass-button" aria-label="View historical data" title="Historical data">
                             <span>📈</span> <span class="dropdown-label">History</span>
+                            <span class="dropdown-hint">Historical sparklines for any metric card</span>
                         </button>
                     </div>
                 </div>
