--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <link rel="stylesheet" href="css/styles.min.css?v=20260226g">
 
     <!-- Modulepreload critical JS for parallel fetch -->
-    <link rel="modulepreload" href="js/core/app.js?v=20260228v">
+    <link rel="modulepreload" href="js/core/app.js?v=20260228w">
     <link rel="modulepreload" href="js/core/api.js">
     <link rel="modulepreload" href="js/core/config.js">
     <link rel="modulepreload" href="js/core/utils.js">
@@ -330,11 +330,7 @@
                             <span class="uptime-metric-label">staked</span>
                         </div>
                     </div>
-                    <div class="uptime-block-pulse">
-                        <span>Block <span id="uptime-block-number">—</span></span>
-                        <span class="uptime-pulse-dot" id="uptime-pulse-dot" title="Network healthy — blocks on schedule"></span>
-                        <span id="uptime-block-age">—</span>
-                    </div>
+
                 </div>
             </div>
             <div class="upgrade-status" id="upgrade-status">
@@ -1531,7 +1527,7 @@
     <script defer src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
 
     <!-- Load app as module -->
-    <script type="module" src="js/core/app.js?v=20260228v"></script>
+    <script type="module" src="js/core/app.js?v=20260228w"></script>
     <!-- My Baker Info Modal -->
     <div class="modal-overlay" id="my-baker-modal" aria-hidden="true">
         <div class="modal-content">
