Add Price Intelligence: SEO price card with prediction game + alerts
- Compact glass card between protocol panel and leaderboard
- CoinGecko live data: price, 24h change, market cap, volume
- Auto-generated narrative context
- Per-cycle prediction game (higher/lower) with streak tracking
- Browser notification price alerts (up to 5)
- SEO meta tags + JSON-LD structured data
- All client-side, localStorage for state

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <link rel="stylesheet" href="css/styles.min.css?v=20260226g">
 
     <!-- Modulepreload critical JS for parallel fetch -->
-    <link rel="modulepreload" href="js/core/app.js?v=20260228aj">
+    <link rel="modulepreload" href="js/core/app.js?v=20260228al">
     <link rel="modulepreload" href="js/core/api.js">
     <link rel="modulepreload" href="js/core/config.js">
     <link rel="modulepreload" href="js/core/utils.js">
@@ -181,6 +181,23 @@
     <!-- GoatCounter Analytics -->
     <script data-goatcounter="https://tezsys.goatcounter.com/count"
             async src="//gc.zgo.at/count.js"></script>
+    <!-- Price Intelligence SEO -->
+    <meta name="description" content="Tezos price today, live XTZ dashboard, staking APY, network health, and on-chain intelligence. The Bloomberg Terminal for Tezos.">
+    <meta property="og:title" content="Tezos Price & Network Intelligence | tezos.systems">
+    <meta property="og:description" content="Live XTZ price, staking APY, network health, and on-chain intelligence. Not just the price — the story.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://tezos.systems">
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "Tezos Systems",
+      "url": "https://tezos.systems",
+      "description": "Live Tezos blockchain dashboard with price intelligence, staking analytics, and network health monitoring.",
+      "applicationCategory": "FinanceApplication",
+      "operatingSystem": "Web"
+    }
+    </script>
 </head>
 <body data-theme="matrix">
     <!-- XTZ Price Bar -->
@@ -1527,7 +1544,7 @@
     <script defer src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
 
     <!-- Load app as module -->
-    <script type="module" src="js/core/app.js?v=20260228aj"></script>
+    <script type="module" src="js/core/app.js?v=20260228al"></script>
     <!-- My Baker Info Modal -->
     <div class="modal-overlay" id="my-baker-modal" aria-hidden="true">
         <div class="modal-content">
