Price Intelligence: move to Features toggle, hidden by default, lazy-init on toggle

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <link rel="stylesheet" href="css/styles.min.css?v=20260226g">
 
     <!-- Modulepreload critical JS for parallel fetch -->
-    <link rel="modulepreload" href="js/core/app.js?v=20260228al">
+    <link rel="modulepreload" href="js/core/app.js?v=20260228am">
     <link rel="modulepreload" href="js/core/api.js">
     <link rel="modulepreload" href="js/core/config.js">
     <link rel="modulepreload" href="js/core/utils.js">
@@ -269,6 +269,10 @@
                         <button id="calc-toggle" class="glass-button" aria-label="Toggle Rewards Calculator" title="Calculator: OFF">
                             <span class="calc-toggle-icon">🧮</span> <span class="dropdown-label">Calculator</span>
                             <span class="dropdown-hint">Estimate staking & baking rewards</span>
+                        </button>
+                        <button id="price-intel-toggle" class="glass-button" aria-label="Toggle Price Intelligence" title="Price Intel: OFF">
+                            <span class="price-intel-toggle-icon">💰</span> <span class="dropdown-label">Price Intel</span>
+                            <span class="dropdown-hint">Live price, predictions, alerts</span>
                         </button>
                         <button id="history-btn" class="glass-button" aria-label="View historical data" title="Historical data">
                             <span>📈</span> <span class="dropdown-label">History</span>
@@ -1544,7 +1548,7 @@
     <script defer src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
 
     <!-- Load app as module -->
-    <script type="module" src="js/core/app.js?v=20260228al"></script>
+    <script type="module" src="js/core/app.js?v=20260228am"></script>
     <!-- My Baker Info Modal -->
     <div class="modal-overlay" id="my-baker-modal" aria-hidden="true">
         <div class="modal-content">
