--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <link rel="stylesheet" href="css/styles.min.css?v=20260226g">
 
     <!-- Modulepreload critical JS for parallel fetch -->
-    <link rel="modulepreload" href="js/core/app.js?v=20260228an">
+    <link rel="modulepreload" href="js/core/app.js?v=20260228ao">
     <link rel="modulepreload" href="js/core/api.js">
     <link rel="modulepreload" href="js/core/config.js">
     <link rel="modulepreload" href="js/core/utils.js">
@@ -1548,7 +1548,7 @@
     <script defer src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
 
     <!-- Load app as module -->
-    <script type="module" src="js/core/app.js?v=20260228an"></script>
+    <script type="module" src="js/core/app.js?v=20260228ao"></script>
     <!-- My Baker Info Modal -->
     <div class="modal-overlay" id="my-baker-modal" aria-hidden="true">
         <div class="modal-content">
