Cycle status: move to price bar as compact chip + progress border
- Cycle chip in price bar: C1158 83.0% 🟢 (compact, always visible)
- Price bar bottom border = cycle progress (glowing 2px accent line)
- Health dot color encodes freshness (green/yellow/red)
- Block height removed (explorer data, not dashboard data)
- 'Xs ago' removed (dot handles it visually)
- Old protocol panel strip hidden (data still flows for other consumers)

--- a/index.html
+++ b/index.html
@@ -217,7 +217,14 @@
             <span class="price-separator price-cta-sep">·</span>
             <a href="https://gov.tez.capital" target="_blank" rel="noopener" class="price-cta" title="Stake XTZ">🥩 Stake</a>
             <a href="https://docs.tez.capital" target="_blank" rel="noopener" class="price-cta" title="Bake on Tezos">🍞 Bake</a>
+            <span class="price-separator price-cta-sep">·</span>
+            <span class="cycle-chip" id="cycle-chip">
+                <span class="cycle-chip-label" id="cycle-chip-label">—</span>
+                <span class="cycle-chip-pct" id="cycle-chip-pct">—</span>
+                <span class="cycle-chip-dot" id="cycle-chip-dot"></span>
+            </span>
         </div>
+        <div class="price-bar-progress" id="price-bar-progress"></div>
     </div>
 
     <!-- Header with controls -->
