Fix PI toggle opacity (call updateVis on init) + add Daily Briefing toggle (default ON)

--- a/index.html
+++ b/index.html
@@ -277,6 +277,10 @@
                             <span class="calc-toggle-icon">🧮</span> <span class="dropdown-label">Calculator</span>
                             <span class="dropdown-hint">Estimate staking & baking rewards</span>
                         </button>
+                        <button id="briefing-toggle" class="glass-button active" aria-label="Toggle Daily Briefing" title="Daily Briefing: ON">
+                            <span class="briefing-toggle-icon">📰</span> <span class="dropdown-label">Briefing</span>
+                            <span class="dropdown-hint">Daily cycle narrative summary</span>
+                        </button>
                         <button id="price-intel-toggle" class="glass-button" aria-label="Toggle Price Intelligence" title="Price Intel: OFF">
                             <span class="price-intel-toggle-icon">💰</span> <span class="dropdown-label">Price Intel</span>
                             <span class="dropdown-hint">Live price, predictions, alerts</span>
