Push Stake/Bake + cycle chip to far right of price bar

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             <span class="price-alt" id="price-btc">—</span>
             <span class="price-separator">·</span>
             <span class="price-mcap">—</span>
-            <span class="price-separator price-cta-sep">·</span>
+            <span class="price-separator price-cta-sep" style="margin-left:auto">·</span>
             <a href="https://gov.tez.capital" target="_blank" rel="noopener" class="price-cta" title="Stake XTZ">🥩 Stake</a>
             <a href="https://docs.tez.capital" target="_blank" rel="noopener" class="price-cta" title="Bake on Tezos">🍞 Bake</a>
             <span class="price-separator price-cta-sep">·</span>
