Cycle chip: restore green pulse dot + seconds ago counter

--- a/index.html
+++ b/index.html
@@ -204,9 +204,10 @@
     <div id="price-bar" class="price-bar">
         <div class="price-bar-content">
             <span class="cycle-chip" id="cycle-chip">
-                <span class="cycle-chip-dot" id="cycle-chip-dot"></span>
                 <span class="cycle-chip-label" id="cycle-chip-label">—</span>
                 <span class="cycle-chip-pct" id="cycle-chip-pct">—</span>
+                <span class="uptime-pulse-dot" id="uptime-pulse-dot" title="Network healthy"></span>
+                <span class="cycle-chip-age" id="uptime-block-age">—</span>
             </span>
             <a href="https://www.coingecko.com/en/coins/tezos" target="_blank" rel="noopener" class="price-link">
                 <span class="price-label">XTZ</span>
