--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <link rel="mask-icon" href="safari-pinned-tab.svg" color="#00d4ff">
     <link rel="manifest" href="site.webmanifest">
 
-    <link rel="stylesheet" href="css/styles.min.css?v=20260228z">
+    <link rel="stylesheet" href="css/styles.min.css?v=20260228za">
 
     <!-- Modulepreload critical JS for parallel fetch -->
     <link rel="modulepreload" href="js/core/app.js?v=20260228ar">
@@ -209,6 +209,7 @@
                 <span class="uptime-pulse-dot" id="uptime-pulse-dot" title="Network healthy"></span>
                 <span class="cycle-chip-age" id="uptime-block-age">—</span>
             </span>
+            <span class="price-pipe">│</span>
             <a href="https://www.coingecko.com/en/coins/tezos" target="_blank" rel="noopener" class="price-link">
                 <span class="price-label">XTZ</span>
                 <span class="price-value">—</span>
@@ -218,6 +219,7 @@
             <span class="price-alt" id="price-btc">—</span>
             <span class="price-separator">·</span>
             <span class="price-mcap">—</span>
+            <span class="price-pipe">│</span>
             <a href="https://gov.tez.capital" target="_blank" rel="noopener" class="price-cta" title="Stake XTZ">🥩 Stake</a>
             <a href="https://docs.tez.capital" target="_blank" rel="noopener" class="price-cta" title="Bake on Tezos">🍞 Bake</a>
 
