--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <link rel="mask-icon" href="safari-pinned-tab.svg" color="#00d4ff">
     <link rel="manifest" href="site.webmanifest">
 
-    <link rel="stylesheet" href="css/styles.min.css?v=20260228za">
+    <link rel="stylesheet" href="css/styles.min.css?v=20260228zb">
 
     <!-- Modulepreload critical JS for parallel fetch -->
     <link rel="modulepreload" href="js/core/app.js?v=20260228ar">
@@ -214,8 +214,6 @@
                 <span class="price-label">XTZ</span>
                 <span class="price-value">—</span>
             </a>
-            <span class="price-change">—</span>
-            <span class="price-separator">·</span>
             <span class="price-alt" id="price-btc">—</span>
             <span class="price-separator">·</span>
             <span class="price-mcap">—</span>
