--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <link rel="mask-icon" href="safari-pinned-tab.svg" color="#00d4ff">
     <link rel="manifest" href="site.webmanifest">
 
-    <link rel="stylesheet" href="css/styles.min.css?v=20260228zb">
+    <link rel="stylesheet" href="css/styles.min.css?v=20260228zc">
 
     <!-- Modulepreload critical JS for parallel fetch -->
     <link rel="modulepreload" href="js/core/app.js?v=20260228ar">
