Cycle chip: add block height between dot and seconds

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <link rel="mask-icon" href="safari-pinned-tab.svg" color="#00d4ff">
     <link rel="manifest" href="site.webmanifest">
 
-    <link rel="stylesheet" href="css/styles.min.css?v=20260228zc">
+    <link rel="stylesheet" href="css/styles.min.css?v=20260228zd">
 
     <!-- Modulepreload critical JS for parallel fetch -->
     <link rel="modulepreload" href="js/core/app.js?v=20260228ar">
@@ -207,6 +207,7 @@
                 <span class="cycle-chip-label" id="cycle-chip-label">—</span>
                 <span class="cycle-chip-pct" id="cycle-chip-pct">—</span>
                 <span class="uptime-pulse-dot" id="uptime-pulse-dot" title="Network healthy"></span>
+                <span class="cycle-chip-block" id="cycle-chip-block">—</span>
                 <span class="cycle-chip-age" id="uptime-block-age">—</span>
             </span>
             <span class="price-pipe">│</span>
