--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <link rel="mask-icon" href="safari-pinned-tab.svg" color="#00d4ff">
     <link rel="manifest" href="site.webmanifest">
 
-    <link rel="stylesheet" href="css/styles.min.css?v=20260228zg">
+    <link rel="stylesheet" href="css/styles.min.css?v=20260228zh">
 
     <!-- Modulepreload critical JS for parallel fetch -->
     <link rel="modulepreload" href="js/core/app.js?v=20260228ar">
@@ -223,7 +223,6 @@
             <a href="https://docs.tez.capital" target="_blank" rel="noopener" class="price-cta" title="Bake on Tezos">🍞 Bake</a>
 
         </div>
-        <div class="price-bar-progress" id="price-bar-progress"></div>
     </div>
 
     <!-- Header with controls -->
