--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- Critical font: always needed -->
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600;700&family=Orbitron:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <!-- Theme fonts: lazy-loaded, only fetched when needed -->
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Exo+2:wght@300;400;600&family=Chakra+Petch:wght@400;600;700&family=IBM+Plex+Mono:wght@400;500;600&display=swap" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Exo+2:wght@300;400;600&family=Chakra+Petch:wght@400;600;700&family=IBM+Plex+Mono:wght@400;500;600&display=swap" rel="stylesheet"></noscript>
@@ -48,7 +48,7 @@
     <link rel="mask-icon" href="safari-pinned-tab.svg" color="#00d4ff">
     <link rel="manifest" href="site.webmanifest">
 
-    <link rel="stylesheet" href="css/styles.min.css?v=20260228zi">
+    <link rel="stylesheet" href="css/styles.min.css?v=20260301g">
 
     <!-- Modulepreload critical JS for parallel fetch -->
     <link rel="modulepreload" href="js/core/app.js?v=20260228ar">
@@ -205,6 +205,7 @@
         <div class="price-bar-content">
             <span class="cycle-chip" id="cycle-chip">
                 <span class="cycle-chip-label" id="cycle-chip-label">—</span>
+                <span class="cycle-chip-sep">·</span>
                 <span class="cycle-chip-pct" id="cycle-chip-pct">—</span>
                 <span class="cycle-chip-block" id="cycle-chip-block">—</span>
                 <span class="uptime-pulse-dot" id="uptime-pulse-dot" title="Network healthy"></span>
